--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "chromedriver": "^110.0.0",
     "wdio-chromedriver-service": "^8.1.1",
     "webdriverio": "^8.3.9"
+   
   },
   "scripts": {
-    "wdio": "wdio run ./wdio.conf.js"
+    "wdio": "wdio run ./wdio.conf.js",
+    "type": "module"
   }
 }
