--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "@wdio/local-runner": "^8.3.9",
     "@wdio/mocha-framework": "^8.3.0",
     "@wdio/spec-reporter": "^8.3.0",
+    "chai": "^4.3.7",
     "chromedriver": "^110.0.0",
     "wdio-chromedriver-service": "^8.1.1",
     "webdriverio": "^8.3.9"
@@ -12,7 +13,6 @@
     "wdio": "wdio run ./wdio.conf.js",
     "type": "module"
   },
-
   "name": "homework-webdriverio",
   "description": "install webdriverIO",
   "version": "1.0.0",
@@ -21,341 +21,342 @@
     "test": "test"
   },
   "dependencies": {
-    "ansi-escapes": "^5.0.0",
     "agent-base": "^6.0.2",
-    "ansi-styles": "^4.3.0",
     "ansi-colors": "^4.1.1",
-    "anymatch": "^3.1.3",
-    "aria-query": "^5.1.3",
-    "archiver-utils": "^2.1.0",
-    "async-exit-hook": "^2.0.1",
-    "archiver": "^5.3.1",
-    "asynckit": "^0.4.0",
+    "ansi-escapes": "^5.0.0",
     "ansi-regex": "^2.1.1",
+    "ansi-styles": "^4.3.0",
+    "anymatch": "^3.1.3",
+    "archiver": "^5.3.1",
+    "archiver-utils": "^2.1.0",
     "argparse": "^2.0.1",
-    "axios": "^1.3.3",
+    "aria-query": "^5.1.3",
     "async": "^3.2.4",
+    "async-exit-hook": "^2.0.1",
+    "asynckit": "^0.4.0",
     "available-typed-arrays": "^1.0.5",
-    "binary-extensions": "^2.2.0",
+    "axios": "^1.3.3",
     "balanced-match": "^1.0.2",
+    "base64-js": "^1.5.1",
+    "binary-extensions": "^2.2.0",
     "bl": "^4.1.0",
     "brace-expansion": "^2.0.1",
-    "base64-js": "^1.5.1",
-    "browser-stdout": "^1.3.1",
-    "cac": "^3.0.4",
-    "buffer-crc32": "^0.2.13",
     "braces": "^3.0.2",
-    "chalk": "^4.1.2",
+    "browser-stdout": "^1.3.1",
     "buffer": "^5.7.1",
-    "chardet": "^0.7.0",
+    "buffer-crc32": "^0.2.13",
+    "cac": "^3.0.4",
     "cacheable-lookup": "^7.0.0",
-    "chownr": "^1.1.4",
     "cacheable-request": "^10.2.7",
-    "chokidar": "^3.5.3",
     "call-bind": "^1.0.2",
-    "cli-spinners": "^2.7.0",
-    "cli-cursor": "^4.0.0",
-    "cli-width": "^4.0.0",
     "camelcase": "^6.3.0",
     "camelcase-keys": "^3.0.0",
-    "ci-info": "^3.8.0",
-    "color-convert": "^2.0.1",
+    "chai-webdriverio-async": "^2.7.0",
+    "chalk": "^4.1.2",
+    "chardet": "^0.7.0",
+    "chokidar": "^3.5.3",
+    "chownr": "^1.1.4",
     "chrome-launcher": "^0.15.1",
+    "ci-info": "^3.8.0",
+    "cli-cursor": "^4.0.0",
+    "cli-spinners": "^2.7.0",
+    "cli-width": "^4.0.0",
     "cliui": "^8.0.1",
-    "compress-commons": "^4.1.1",
-    "crc32-stream": "^4.0.2",
     "clone": "^1.0.4",
-    "cross-fetch": "^3.1.5",
-    "combined-stream": "^1.0.8",
+    "color-convert": "^2.0.1",
     "color-name": "^1.1.4",
-    "core-util-is": "^1.0.3",
+    "combined-stream": "^1.0.8",
     "compare-versions": "^5.0.3",
+    "compress-commons": "^4.1.1",
     "concat-map": "^0.0.1",
+    "core-util-is": "^1.0.3",
     "crc-32": "^1.2.2",
+    "crc32-stream": "^4.0.2",
+    "cross-fetch": "^3.1.5",
+    "cross-spawn": "^4.0.2",
     "css-shorthand-properties": "^1.1.1",
     "css-value": "^0.0.1",
-    "cross-spawn": "^4.0.2",
     "debug": "^4.3.4",
-    "decompress-response": "^6.0.0",
     "decamelize": "^6.0.0",
+    "decompress-response": "^6.0.0",
     "deep-equal": "^2.2.0",
     "deep-is": "^0.1.4",
     "deepmerge-ts": "^4.3.0",
-    "devtools": "^8.3.8",
     "defaults": "^1.0.4",
-    "diff": "^5.0.0",
-    "define-properties": "^1.2.0",
     "defer-to-connect": "^2.0.1",
-    "edge-paths": "^3.0.5",
-    "diff-sequences": "^29.4.3",
-    "easy-table": "^1.2.0",
-    "eastasianwidth": "^0.2.0",
-    "error-ex": "^1.3.2",
-    "ejs": "^3.1.8",
-    "escape-string-regexp": "^1.0.5",
-    "end-of-stream": "^1.4.4",
-    "escalade": "^3.1.1",
-    "es-get-iterator": "^1.1.3",
-    "expect-webdriverio": "^4.1.2",
-    "expect": "^29.4.3",
+    "define-properties": "^1.2.0",
+    "delayed-stream": "^1.0.0",
+    "devtools": "^8.3.8",
     "devtools-protocol": "^0.0.1103684",
+    "diff": "^5.0.0",
+    "diff-sequences": "^29.4.3",
+    "eastasianwidth": "^0.2.0",
+    "easy-table": "^1.2.0",
+    "edge-paths": "^3.0.5",
+    "ejs": "^3.1.8",
     "emoji-regex": "^8.0.0",
-    "fast-deep-equal": "^2.0.1",
+    "end-of-stream": "^1.4.4",
+    "error-ex": "^1.3.2",
+    "es-get-iterator": "^1.1.3",
+    "escalade": "^3.1.1",
+    "escape-string-regexp": "^1.0.5",
+    "execa": "^7.0.0",
+    "expect": "^29.4.3",
+    "expect-webdriverio": "^4.1.2",
     "external-editor": "^3.1.0",
     "extract-zip": "^2.0.1",
-    "delayed-stream": "^1.0.0",
-    "figures": "^5.0.0",
-    "execa": "^7.0.0",
+    "fast-deep-equal": "^2.0.1",
     "fd-slicer": "^1.1.0",
+    "figures": "^5.0.0",
     "filelist": "^1.0.4",
-    "follow-redirects": "^1.15.2",
-    "flat": "^5.0.2",
     "fill-range": "^7.0.1",
-    "form-data-encoder": "^2.1.4",
     "find-up": "^6.3.0",
-    "form-data": "^4.0.0",
+    "flat": "^5.0.2",
+    "follow-redirects": "^1.15.2",
     "for-each": "^0.3.3",
+    "form-data": "^4.0.0",
+    "form-data-encoder": "^2.1.4",
+    "fs-constants": "^1.0.0",
     "fs-extra": "^11.1.0",
     "fs.realpath": "^1.0.0",
     "fsevents": "^2.3.2",
     "function-bind": "^1.1.1",
-    "fs-constants": "^1.0.0",
+    "functions-have-names": "^1.2.3",
+    "gaze": "^1.1.3",
+    "get-caller-file": "^2.0.5",
+    "get-intrinsic": "^1.2.0",
     "get-stream": "^6.0.1",
     "glob": "^7.2.3",
     "glob-parent": "^5.1.2",
-    "get-intrinsic": "^1.2.0",
-    "functions-have-names": "^1.2.3",
+    "globule": "^1.3.4",
+    "gopd": "^1.0.1",
     "got": "^12.5.3",
     "graceful-fs": "^4.2.10",
-    "has": "^1.0.3",
-    "get-caller-file": "^2.0.5",
-    "globule": "^1.3.4",
-    "gaze": "^1.1.3",
-    "gopd": "^1.0.1",
-    "has-property-descriptors": "^1.0.0",
     "grapheme-splitter": "^1.0.4",
-    "has-flag": "^4.0.0",
+    "has": "^1.0.3",
+    "has-ansi": "^2.0.0",
     "has-bigints": "^1.0.2",
-    "has-tostringtag": "^1.0.0",
-    "hosted-git-info": "^4.1.0",
+    "has-flag": "^4.0.0",
+    "has-property-descriptors": "^1.0.0",
     "has-symbols": "^1.0.3",
+    "has-tostringtag": "^1.0.0",
     "he": "^1.2.0",
-    "http2-wrapper": "^2.2.0",
+    "hosted-git-info": "^4.1.0",
     "http-cache-semantics": "^4.1.1",
+    "http2-wrapper": "^2.2.0",
+    "https-proxy-agent": "^5.0.1",
     "human-signals": "^4.3.0",
     "iconv-lite": "^0.4.24",
-    "has-ansi": "^2.0.0",
-    "https-proxy-agent": "^5.0.1",
+    "ieee754": "^1.2.1",
     "import-meta-resolve": "^2.2.1",
-    "inquirer": "^9.1.2",
-    "inherits": "^2.0.4",
-    "is-arguments": "^1.1.1",
+    "indent-string": "^3.2.0",
     "inflight": "^1.0.6",
-    "is-array-buffer": "^3.0.1",
+    "inherits": "^2.0.4",
+    "inquirer": "^9.1.2",
+    "internal-slot": "^1.0.5",
     "ip-regex": "^4.3.0",
+    "is-arguments": "^1.1.1",
+    "is-array-buffer": "^3.0.1",
+    "is-arrayish": "^0.2.1",
     "is-bigint": "^1.0.4",
     "is-binary-path": "^2.1.0",
     "is-boolean-object": "^1.1.2",
-    "is-arrayish": "^0.2.1",
     "is-callable": "^1.2.7",
-    "is-docker": "^2.2.1",
-    "indent-string": "^3.2.0",
-    "ieee754": "^1.2.1",
-    "internal-slot": "^1.0.5",
-    "is-date-object": "^1.0.5",
-    "is-fullwidth-code-point": "^3.0.0",
-    "is-interactive": "^2.0.0",
     "is-core-module": "^2.11.0",
-    "is-glob": "^4.0.3",
+    "is-date-object": "^1.0.5",
+    "is-docker": "^2.2.1",
     "is-extglob": "^2.1.1",
-    "is-number-object": "^1.0.7",
+    "is-fullwidth-code-point": "^3.0.0",
+    "is-glob": "^4.0.3",
+    "is-interactive": "^2.0.0",
     "is-map": "^2.0.2",
     "is-number": "^7.0.0",
+    "is-number-object": "^1.0.7",
+    "is-plain-obj": "^4.1.0",
     "is-regex": "^1.1.4",
     "is-set": "^2.0.2",
-    "is-plain-obj": "^4.1.0",
+    "is-shared-array-buffer": "^1.0.2",
     "is-stream": "^3.0.0",
+    "is-string": "^1.0.7",
     "is-symbol": "^1.0.4",
+    "is-typed-array": "^1.1.10",
     "is-unicode-supported": "^1.3.0",
     "is-url": "^1.2.4",
-    "is-typed-array": "^1.1.10",
-    "is-shared-array-buffer": "^1.0.2",
-    "is-string": "^1.0.7",
-    "is-wsl": "^2.2.0",
-    "is-weakset": "^2.0.2",
+    "is-utf8": "^0.2.1",
     "is-weakmap": "^2.0.1",
+    "is-weakset": "^2.0.2",
+    "is-wsl": "^2.2.0",
     "is2": "^2.0.9",
     "isarray": "^2.0.5",
     "isexe": "^2.0.0",
-    "jest-get-type": "^29.4.3",
-    "jest-message-util": "^29.4.3",
-    "jest-matcher-utils": "^29.4.3",
-    "jest-diff": "^29.4.3",
-    "json-parse-even-better-errors": "^2.3.1",
-    "keyv": "^4.5.2",
-    "is-utf8": "^0.2.1",
-    "json-buffer": "^3.0.1",
     "jake": "^10.8.5",
+    "jest-diff": "^29.4.3",
+    "jest-get-type": "^29.4.3",
+    "jest-matcher-utils": "^29.4.3",
+    "jest-message-util": "^29.4.3",
     "jest-util": "^29.4.3",
-    "jsonfile": "^6.1.0",
     "js-tokens": "^4.0.0",
+    "js-yaml": "^4.1.0",
+    "json-buffer": "^3.0.1",
+    "json-parse-even-better-errors": "^2.3.1",
+    "jsonfile": "^6.1.0",
+    "keyv": "^4.5.2",
+    "ky": "^0.33.2",
+    "lazystream": "^1.0.1",
     "lighthouse-logger": "^1.3.0",
     "lines-and-columns": "^1.2.4",
+    "load-json-file": "^1.1.0",
     "locate-path": "^7.2.0",
-    "lodash.clonedeep": "^4.5.0",
-    "lodash.difference": "^4.5.0",
-    "lazystream": "^1.0.1",
     "lodash": "^4.17.21",
-    "lodash.flattendeep": "^4.4.0",
+    "lodash.clonedeep": "^4.5.0",
+    "lodash.defaults": "^4.2.0",
+    "lodash.difference": "^4.5.0",
     "lodash.flatten": "^4.4.0",
-    "lodash.pickby": "^4.6.0",
+    "lodash.flattendeep": "^4.4.0",
     "lodash.isplainobject": "^4.0.6",
+    "lodash.pickby": "^4.6.0",
     "lodash.union": "^4.6.0",
     "lodash.zip": "^4.2.0",
-    "loglevel-plugin-prefix": "^0.8.4",
-    "map-obj": "^1.0.1",
     "log-symbols": "^4.1.0",
-    "load-json-file": "^1.1.0",
-    "lowercase-keys": "^3.0.0",
     "loglevel": "^1.8.1",
+    "loglevel-plugin-prefix": "^0.8.4",
+    "lowercase-keys": "^3.0.0",
     "lru-cache": "^6.0.0",
-    "lodash.defaults": "^4.2.0",
-    "ky": "^0.33.2",
-    "micromatch": "^4.0.5",
+    "map-obj": "^1.0.1",
     "marky": "^1.2.5",
-    "mime-types": "^2.1.35",
-    "mime-db": "^1.52.0",
     "merge-stream": "^2.0.0",
-    "mkdirp-classic": "^0.5.3",
+    "micromatch": "^4.0.5",
+    "mime-db": "^1.52.0",
+    "mime-types": "^2.1.35",
+    "mimic-fn": "^4.0.0",
     "mimic-response": "^3.1.0",
-    "ms": "^2.1.2",
     "minimatch": "^3.1.2",
-    "normalize-package-data": "^3.0.3",
+    "minimist": "^1.2.8",
+    "mkdirp": "^2.1.3",
+    "mkdirp-classic": "^0.5.3",
+    "ms": "^2.1.2",
     "mute-stream": "^0.0.8",
+    "nanoid": "^3.3.3",
+    "node-fetch": "^2.6.7",
+    "normalize-package-data": "^3.0.3",
     "normalize-path": "^3.0.0",
     "normalize-url": "^8.0.0",
-    "nanoid": "^3.3.3",
-    "object-is": "^1.1.5",
     "npm-run-path": "^5.1.0",
     "object-inspect": "^1.12.3",
+    "object-is": "^1.1.5",
     "object-keys": "^1.1.1",
     "object.assign": "^4.1.4",
-    "ora": "^6.1.2",
-    "onetime": "^6.0.0",
     "once": "^1.4.0",
+    "onetime": "^6.0.0",
+    "ora": "^6.1.2",
     "os-tmpdir": "^1.0.2",
     "p-cancelable": "^3.0.0",
     "p-iteration": "^1.1.8",
-    "js-yaml": "^4.1.0",
-    "parse-json": "^5.2.0",
     "p-limit": "^4.0.0",
     "p-locate": "^6.0.0",
+    "parse-json": "^5.2.0",
+    "parse-ms": "^2.1.0",
     "path-exists": "^5.0.0",
     "path-is-absolute": "^1.0.1",
-    "mkdirp": "^2.1.3",
-    "node-fetch": "^2.6.7",
-    "path-parse": "^1.0.7",
     "path-key": "^3.1.1",
-    "parse-ms": "^2.1.0",
-    "minimist": "^1.2.8",
-    "pinkie-promise": "^2.0.1",
-    "pinkie": "^2.0.4",
-    "pend": "^1.2.0",
-    "pify": "^2.3.0",
+    "path-parse": "^1.0.7",
     "path-type": "^1.1.0",
-    "mimic-fn": "^4.0.0",
+    "pend": "^1.2.0",
     "picomatch": "^2.3.1",
+    "pify": "^2.3.0",
+    "pinkie": "^2.0.4",
+    "pinkie-promise": "^2.0.1",
     "pretty-format": "^29.4.3",
     "pretty-ms": "^7.0.1",
     "process-nextick-args": "^2.0.1",
     "proxy-from-env": "^1.1.0",
-    "puppeteer-core": "^19.6.3",
-    "query-selector-shadow-dom": "^1.0.1",
-    "read-pkg-up": "^9.1.0",
-    "read-pkg": "^7.1.0",
     "pseudomap": "^1.0.2",
     "pump": "^3.0.0",
+    "puppeteer-core": "^19.6.3",
+    "query-selector-shadow-dom": "^1.0.1",
     "quick-lru": "^5.1.1",
+    "randombytes": "^2.1.0",
     "react-is": "^18.2.0",
+    "read-pkg": "^7.1.0",
+    "read-pkg-up": "^9.1.0",
     "readable-stream": "^3.6.0",
     "readdir-glob": "^1.1.2",
-    "resolve-alpn": "^1.2.1",
-    "randombytes": "^2.1.0",
     "readdirp": "^3.6.0",
-    "resq": "^1.11.0",
-    "require-directory": "^2.1.1",
-    "regexp.prototype.flags": "^1.4.3",
-    "responselike": "^3.0.0",
     "recursive-readdir": "^2.2.3",
-    "rimraf": "^3.0.2",
-    "restore-cursor": "^4.0.0",
-    "safer-buffer": "^2.1.2",
-    "run-async": "^2.4.1",
+    "regexp.prototype.flags": "^1.4.3",
+    "require-directory": "^2.1.1",
     "resolve": "^1.22.1",
+    "resolve-alpn": "^1.2.1",
+    "responselike": "^3.0.0",
+    "resq": "^1.11.0",
+    "restore-cursor": "^4.0.0",
     "rgb2hex": "^0.2.5",
+    "rimraf": "^3.0.2",
+    "run-async": "^2.4.1",
     "rxjs": "^7.8.0",
-    "shebang-command": "^2.0.0",
     "safe-buffer": "^5.1.2",
+    "safer-buffer": "^2.1.2",
     "semver": "^7.3.8",
+    "serialize-error": "^8.1.0",
+    "serialize-javascript": "^6.0.0",
+    "shebang-command": "^2.0.0",
+    "shebang-regex": "^3.0.0",
     "side-channel": "^1.0.4",
     "signal-exit": "^3.0.7",
-    "serialize-error": "^8.1.0",
-    "spdx-correct": "^3.1.1",
-    "spdx-license-ids": "^3.0.12",
     "slash": "^3.0.0",
+    "spdx-correct": "^3.1.1",
     "spdx-exceptions": "^2.3.0",
     "spdx-expression-parse": "^3.0.1",
-    "string_decoder": "^1.3.0",
-    "stream-buffers": "^3.0.2",
-    "string-width": "^4.2.3",
-    "stop-iteration-iterator": "^1.0.0",
-    "serialize-javascript": "^6.0.0",
+    "spdx-license-ids": "^3.0.12",
+    "split2": "^4.1.0",
     "stack-utils": "^2.0.6",
+    "stop-iteration-iterator": "^1.0.0",
+    "stream-buffers": "^3.0.2",
+    "string_decoder": "^1.3.0",
+    "string-width": "^4.2.3",
+    "strip-ansi": "^6.0.1",
+    "strip-bom": "^2.0.0",
     "strip-final-newline": "^3.0.0",
     "strip-json-comments": "^3.1.1",
-    "supports-color": "^7.2.0",
-    "strip-bom": "^2.0.0",
-    "strip-ansi": "^6.0.1",
-    "supports-preserve-symlinks-flag": "^1.0.0",
-    "split2": "^4.1.0",
-    "tar-stream": "^2.2.0",
-    "tar-fs": "^2.1.1",
-    "tmp": "^0.0.33",
-    "shebang-regex": "^3.0.0",
-    "to-regex-range": "^5.0.1",
-    "type": "^2.7.2",
     "suffix": "^0.1.1",
-    "tslib": "^2.5.0",
+    "supports-color": "^7.2.0",
+    "supports-preserve-symlinks-flag": "^1.0.0",
+    "tar-fs": "^2.1.1",
+    "tar-stream": "^2.2.0",
+    "tcp-port-used": "^1.0.2",
     "text-table": "^0.2.0",
     "through": "^2.3.8",
-    "tcp-port-used": "^1.0.2",
+    "tmp": "^0.0.33",
+    "to-regex-range": "^5.0.1",
     "tr46": "^0.0.3",
+    "tslib": "^2.5.0",
+    "type": "^2.7.2",
+    "type-fest": "^2.19.0",
     "ua-parser-js": "^1.0.33",
     "unbzip2-stream": "^1.4.3",
-    "util-deprecate": "^1.0.2",
-    "webdriver": "^8.3.8",
     "universalify": "^2.0.0",
-    "which": "^2.0.2",
-    "validate-npm-package-license": "^3.0.4",
-    "which-collection": "^1.0.1",
+    "util-deprecate": "^1.0.2",
     "uuid": "^9.0.0",
-    "type-fest": "^2.19.0",
-    "wrap-ansi": "^7.0.0",
-    "ws": "^8.11.0",
-    "workerpool": "^6.2.1",
+    "validate-npm-package-license": "^3.0.4",
     "wcwidth": "^1.0.1",
-    "yallist": "^4.0.0",
-    "which-typed-array": "^1.1.9",
-    "whatwg-url": "^5.0.0",
-    "which-boxed-primitive": "^1.0.2",
-    "y18n": "^5.0.8",
-    "yargs-unparser": "^2.0.0",
-    "yarn-install": "^1.0.0",
+    "webdriver": "^8.3.8",
     "webidl-conversions": "^3.0.1",
-    "yauzl": "^2.10.0",
+    "whatwg-url": "^5.0.0",
+    "which": "^2.0.2",
+    "which-boxed-primitive": "^1.0.2",
+    "which-collection": "^1.0.1",
+    "which-typed-array": "^1.1.9",
+    "workerpool": "^6.2.1",
+    "wrap-ansi": "^7.0.0",
     "wrappy": "^1.0.2",
+    "ws": "^8.11.0",
+    "y18n": "^5.0.8",
+    "yallist": "^4.0.0",
     "yargs": "^17.7.0",
     "yargs-parser": "^20.2.4",
+    "yargs-unparser": "^2.0.0",
+    "yarn-install": "^1.0.0",
+    "yauzl": "^2.10.0",
     "yocto-queue": "^1.0.0",
     "zip-stream": "^4.1.0"
   },
