--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -1,35 +1,20 @@
-# This is a basic workflow that is manually triggered
-
-name: Manual workflow
-
-# Controls when the action will run. Workflow runs when manually triggered using the UI
-# or API.
-on:
-  workflow_dispatch:
-    # Inputs the workflow accepts.
-    inputs:
-      name:
-        # Friendly description to be shown in the UI instead of 'name'
-        description: 'Person to greet'
-        # Default value if no value is explicitly provided
-        default: 'World'
-        # Input has to be provided for the workflow to run
-        required: true
-
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
+name: Homework 
+on: [push, pull_request]
 jobs:
-  start-runner:
-    name: Start self-hosted EC2 runner
+  build:
     runs-on: ubuntu-latest
-    
-    outputs:
-      label: ${{ steps.start-ec2-runner.outputs.label }}
-      ec2-instance-id: ${{ steps.start-ec2-runner.outputs.ec2-instance-id }}
-
-     steps:
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID_SBX_RUNNER }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY_SBX_RUNNER }}
-          aws-region: us-east-1
+    steps:
+        - name: Checkout
+          uses: actions/checkout@v2
+        - uses: actions/setup-node@v1
+          with:
+            node-version: 18
+        - name: Install
+          run: yarn add
+        - name: Test
+          run: npm run wdio
+        - uses: actions/upload-artifact@v1
+          if: failure()
+          with:
+            name: allureReport
+            path: ./reports/allure/allure-report
