--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -5,12 +5,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
         - name: Checkout
-          uses: actions/checkout@v2
+          uses: actions/checkout@v3
         - uses: actions/setup-node@v1
           with:
             node-version: 18
         - name: Install
-          run: yarn add
+          run: yarn
         - name: Test
           run: npm run wdio
         - uses: actions/upload-artifact@v1
