--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -10,7 +10,7 @@ jobs:
           with:
             node-version: 18
         - name: Install
-          run: npm install
+          run: npm install --no-optional
         - name: Test
           run: npm run wdio
         - uses: actions/upload-artifact@v1
