--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@wdio/cli": "^8.3.9",
     "@wdio/local-runner": "^8.3.9",
     "@wdio/mocha-framework": "^8.3.0",
+    "@wdio/selenium-standalone-service": "^8.6.8",
     "@wdio/spec-reporter": "^8.3.0",
     "chai": "^4.3.7",
     "chromedriver": "^110.0.0",
@@ -296,6 +297,7 @@
     "rxjs": "^7.8.0",
     "safe-buffer": "^5.1.2",
     "safer-buffer": "^2.1.2",
+    "selenium-standalone": "^8.3.0",
     "semver": "^7.3.8",
     "serialize-error": "^8.1.0",
     "serialize-javascript": "^6.0.0",
