--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,5 +1,11 @@
 name: Daily Automation Run
 on: [push, pull_request]
+
+  workflow_dispatch:
+      browser:
+        description: 'Name of the browser from browser-capabilities-sauce-labs.js'
+        required: true
+        default: 'chrome'
 env:
   SAUCE_USERNAME: ${{ secrets.SAUCE_USERNAME }}
   SAUCE_ACCESS_KEY: ${{ secrets.SAUCE_ACCESS_KEY }}
