--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,10 +1,9 @@
 name: Daily Automation Run
-# on: [push, pull_request]
-#   workflow_dispatch:
-#       browser:
-#         description: 'Name of the browser from browser-capabilities-sauce-labs.js'
-#         required: true
-#         default: 'chrome'
+
+env:
+  SAUCE_USERNAME: ${{ secrets.SAUCE_USERNAME }}
+  SAUCE_ACCESS_KEY: ${{ secrets.SAUCE_ACCESS_KEY }}
+
 on:
   push:
   pull_request:
@@ -14,9 +13,6 @@ on:
         description: 'Name of the browser from browser-capabilities-sauce-labs.js'
         required: true
         default: 'chrome'
-env:
-  SAUCE_USERNAME: ${{ secrets.SAUCE_USERNAME }}
-  SAUCE_ACCESS_KEY: ${{ secrets.SAUCE_ACCESS_KEY }}
 
 jobs:
   build:
@@ -26,11 +22,11 @@ jobs:
 
         - name: Installing dependencies
           working-directory: ./
-          run: npm install
+          run: yarn
 
         - name: Start running automated tests with custom arguments in SauceLabs...
           working-directory: ./
-          run: npm run wdio
+          run: yarn remote 
 
         - name: Get Allure history
           uses: actions/checkout@v3
