--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "webdriverio": "^8.3.9"
   },
   "scripts": {
-    "wdio": "wdio run ./wdio.conf.js",
+    "test": "wdio run wdio.conf.js",
+    "remote": "wdio run wdio.conf.remote.js",
     "type": "module"
   },
   "name": "homework-webdriverio",
@@ -23,6 +24,7 @@
     "test": "test"
   },
   "dependencies": {
+    "@wdio/sauce-service": "^8.6.9",
     "agent-base": "^6.0.2",
     "ansi-colors": "^4.1.1",
     "ansi-escapes": "^5.0.0",
@@ -314,8 +316,8 @@
     "stack-utils": "^2.0.6",
     "stop-iteration-iterator": "^1.0.0",
     "stream-buffers": "^3.0.2",
-    "string_decoder": "^1.3.0",
     "string-width": "^4.2.3",
+    "string_decoder": "^1.3.0",
     "strip-ansi": "^6.0.1",
     "strip-bom": "^2.0.0",
     "strip-final-newline": "^3.0.0",
@@ -341,6 +343,7 @@
     "uuid": "^9.0.0",
     "validate-npm-package-license": "^3.0.4",
     "wcwidth": "^1.0.1",
+    "wdio-allure-reporter": "^0.8.3",
     "webdriver": "^8.3.8",
     "webidl-conversions": "^3.0.1",
     "whatwg-url": "^5.0.0",
