--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -1,11 +1,33 @@
+# name: learn-github-actions
+# env:
+#   SAUCE_USERNAME: ${{ secrets.SAUCE_USERNAME }}
+#   SAUCE_ACCESS_KEY: ${{ secrets.SAUCE_ACCESS_KEY }}
+
+# on: [push]
+# jobs:
+#   check-bats-version:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - uses: actions/checkout@v3
+#       - uses: actions/setup-node@v3
+#         with:
+#           node-version: '16'
+
+#       - name: Installing dependencies
+#         working-directory: ./
+#         run: yarn
+
+#       - name: Start running automated tests with custom arguments in SauceLabs...
+#         working-directory: ./
+#         run: yarn remote 
+
+
 name: learn-github-actions
-env:
-  SAUCE_USERNAME: ${{ secrets.SAUCE_USERNAME }}
-  SAUCE_ACCESS_KEY: ${{ secrets.SAUCE_ACCESS_KEY }}
 
 on: [push]
+
 jobs:
-  check-bats-version:
+  run-tests:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -14,9 +36,7 @@ jobs:
           node-version: '16'
 
       - name: Installing dependencies
-        working-directory: ./
         run: yarn
 
-      - name: Start running automated tests with custom arguments in SauceLabs...
-        working-directory: ./
-        run: yarn remote 
+      - name: Start running automated tests
+        run: yarn remote
