--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -35,7 +35,7 @@ jobs:
         with:
           node-version: '16'
       - name: Install Chrome
-        run: sudo apt update && apt upgrade && sudo apt install dpkg && wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb && sudo dpkg -i google-chrome-stable_current_amd64.deb 
+        run: sudo apt update && sudo apt upgrade && sudo apt install dpkg && wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb && sudo dpkg -i google-chrome-stable_current_amd64.deb 
 
       - name: Installing dependencies
         run: yarn
